# Buscador-Filmes-ORI

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  arvore_b_plus.cpp  arvore_b_plus.h  b_plus_tree_index.h  docker-compose.yml  filmes.h  filmes_test.csv  indice_invertido.cpp  indice_invertido.h  main  main.cpp  main1.cpp  main_qt.cpp  run.sh  terminal.cpp  terminal.h  teste.cpp  teste_arvore  teste_prefixo.h
.devcontainer/: devcontainer.json
